Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81867

QQC2 SplitView doesn't work if an item is invisible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.0 Beta2
    • 5.14.1
    • Quick: Controls 2
    • None
    • All
    • 8a442c3b7709424c768a99b304bdbdbac81f8011 (qt/qtquickcontrols2/5.15)
    • Shovelling Snow, Q1/2020 Finale

    Description

      In below example you will be unable to resize the last rectangle.

      import QtQuick 2.14
      import QtQuick.Controls 2.14
      
      ApplicationWindow {
          visible: true
          width: 640
          height: 480
      
          SplitView {
              anchors.fill: parent
      
              Rectangle {
                  color: "steelblue"
      
                  SplitView.minimumWidth: visible ? 100 : 0
                  SplitView.maximumWidth: visible ? 99999 : 0
              }
      
              Rectangle {
                  color: "tomato"
      
                  SplitView.fillWidth: visible
                  SplitView.minimumWidth: visible ? 100 : 0
                  SplitView.maximumWidth: visible ? 99999 : 0
              }
      
              Rectangle {
                  color: "navajowhite"
                  visible: false
      
                  SplitView.minimumWidth: visible ? 100 : 0
                  SplitView.maximumWidth: visible ? 99999 : 0
              }
      
              Rectangle {
                  color: "mediumseagreen"
      
                  SplitView.minimumWidth: visible ? 100 : 0
                  SplitView.maximumWidth: visible ? 99999 : 0
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            damianatorrpm Damian Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes