src/quicktemplates2/qquicksplitview_p_p.h
@@ -112,6 +112,7 @@ public:
     QVector<QQuickItem*> m_handleItems;
     int m_hoveredHandleIndex = -1;
     int m_pressedHandleIndex = -1;
+    int m_nextVisibleIndexAfterPressedHandle = -1;
     QPointF m_pressPos;
     QPointF m_mousePos;
     QPointF m_handlePosBeforePress;
